--- a/dashboard/templates/dashboard/upload_projects.html
+++ b/dashboard/templates/dashboard/upload_projects.html
@@ -10,7 +10,9 @@
     <div class="row">
 
       <h1 class="display-5">Subir Proyectos</h1>
-
+        <button id = "AutoUpdate_Projects" title="Automaticamente descarga la información del Hermes y actualiza la información." >
+          Actualización Automatica
+        </button>
         <form method="post" class="dima-dragndrop_form" enctype="multipart/form-data" action="{% url 'upload_project' %}">
           {% csrf_token %}
           <!--<input type="file" name="xmlfile" />-->
@@ -29,57 +31,6 @@
             </div>
 
         </form>
-
-        <table class="table table-hover">
-
-          <thead>
-            <tr>
-              <th scope="col">Proyecto</th>
-              <th scope="col">Director</th>
-              <th scope="col">Facultad</th>
-              <th scope="col">Departamento</th>
-              <th scope="col">Tipologia</th>        
-              <th scope="col">Convocatoria</th>
-              <th scope="col">Estado</th>
-            </tr>
-          </thead>
-      
-          <tbody>
-          {% for project in projects %}
-      
-            {% replace project.project_name '' '' as name %}
-            {% replace project.first_name '' '' as first_name %}
-            {% replace project.last_name '' '' as last_name %}
-            {% replace project.call_type_pretty '' '' as call_type %}
-            {% replace project.faculty_pretty '' '' as faculty %}
-            {% replace project.departament_pretty '' '' as department %}
-            {% replace project.call '' '' as call %}
-            {% replace project.project_state_pretty '' '' as state %}
-            <tr>
-              <td class="dima-group--view" data-obscure="{{project.obscure}}">
-                <a class="btn btn-link dima--table-btn-link" href="{% url 'projects' project.obscure %}" role="button" target="_blank">{{name}}</a>
-                {% if user.is_authenticated %}
-                  <a class="" href="{% url projects_admin|admin_urlname:'change' project.obscure %}">Editar<i class="bi bi-pencil-square"></i></a>
-                  <a class="" href="{% url 'projects' project.obscure %}/report" target="_blank"> Reporte<i class="bi bi-pencil-square"></i></a>
-                {% endif %}
-              </td>
-              <td style="text-align:center;vertical-align:top;"> {{first_name|title}} {{last_name|title}}</td>
-              <td style="text-align:center;vertical-align:top;">{{faculty|title}}</td>
-              <td style="text-align:center;vertical-align:top;">{{department|title}}</td>
-              
-              <td style="text-align:center;vertical-align:top;">{{call_type|title}}</td>
-              
-              <td style="text-align:center;vertical-align:top;">{{call|title}}</td>
-      
-              <td style="text-align:center;vertical-align:top;">{{state|title}}</td>
-            </tr>
-          {% endfor %}
-          </tbody>
-      
-        </table>
-
-
-
 
     </div>
   </div>
