Added new table for the update of databases

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 <!--<div class="container">-->
 <nav class="navbar navbar-expand-lg bg-body-tertiary dima-navbar">
   <div class="div-flex">
-    <a class="navbar-brand" href="/dashboard/">
+    <a class="navbar-brand" href="/">
       <img src="{% static 'assets/dima_logo.svg' %}" alt="Dima" width="300" height="60">
     </a>
 
