Fixed a bug where seminars would show up alongside groups

--- a/data/templates/static/equipo_de_trabajo.html
+++ b/data/templates/static/equipo_de_trabajo.html
@@ -119,14 +119,14 @@
         </td> 
         <td>
           <div>
-            <img src="{% static '/unal/images/perfiles/geral.png' %}">
-            <p class="dima-equipo-txt4">Geraldine Ladino Vásquez</p>
+            <img src="{% static '/unal/images/perfiles/mateo.png' %}">
+            <p class="dima-equipo-txt4">Mateo Tabares Galvis</p>
             <br>
             <br> 
             <br>             
             <p class="dima-equipo-txt5">dima_man@unal.edu.co</p>
             <br>
-            <p class="dima-equipo-txt5">gladinov@unal.edu.co</p>
+            <p class="dima-equipo-txt5">mattabaresgal@unal.edu.co</p>
             <br>
             <p class="dima-equipo-txt5">Ext: 50279</p>
           </div>
