--- a/data/templates/tables.html
+++ b/data/templates/tables.html
@@ -627,7 +627,7 @@
 <script type="text/python">
   from browser import document
 
-  tabs = ['Researchers-tab', 'Patents-tab', 'Projects-tab']
+  tabs = ['Researchers-tab', 'Patents-tab', 'Projects-tab', 'Seminars-tab']
   for tab in tabs:
       document.select_one(f'#{tab}').style.display = 'none'
 </script>
