--- a/data/templates/data.html
+++ b/data/templates/data.html
@@ -27,7 +27,7 @@
     <option value="Researchers-tab">Investigadores</option>
     <option value="Patents-tab">Propiedad intelectual</option>
     <option value="Projects-tab">Proyectos</option>
-    <option value="Seminars-tab">Seminarios</option>
+    <option value="Seminars-tab">Semilleros</option>
   </select>
   
   <div id="load-circle" class="loader"></div>
