Fixed a bug where the wrong budget was being assigned to a project+Added a function to search projects by code

--- a/data/templates/tables.html
+++ b/data/templates/tables.html
@@ -474,10 +474,17 @@
             </span>
           </h4>
           <br>
-            <input type="text" id = "dima-search--project_name__projects" class="search-input">
+          <input type="text" id = "dima-search--project_name__projects" class="search-input">
+          <br>
+          <h4 class="display-8">
+            Buscar por Codigo Hermes
+          </h4>
+          <br>
+          <input type="number" id = "dima-search--hermes_cod__projects" class="search-input">
+            
         </div>
         <br>
-
+        
         <div class="col-lg-8 col-sm-12">
           <div class="table_overfull" id="dima-render--projects">{% include 'projects_list.html' %}</div>
         </div>
